pxc/tests/test_031_thrattr/up4.px
public namespace up4;
import core::common -;

pure function {f} int fts(int x)
{
  int r = f(3 + x);
  return r;
}

function int getbz() {
  pure function int foo(int x) { // error: parent function is not pure
    return x;
  }
  int x = fts{foo}(5);
  return x;
}

function void t1() {
  println(getbz());
}

t1();

